feat: add posthog for session replays
