# desktop_app/src/backend/database/schema/user.ts
@@ -6,6 +6,7 @@ export const userTable = sqliteTable('user', {
   id: int().primaryKey({ autoIncrement: true }),
   hasCompletedOnboarding: int({ mode: 'boolean' }).notNull().default(false),
   collectTelemetryData: int({ mode: 'boolean' }).notNull().default(true),
+  collectAnalyticsData: int({ mode: 'boolean' }).notNull().default(true),
   createdAt: text()
     .notNull()
     .default(sql`(current_timestamp)`),
